# advent-of-spin

./: README.md
2022/CHALLENGE-1/: spin.toml
2022/CHALLENGE-2/: spin.toml
2022/CHALLENGE-2/handle_404/: Cargo.toml
2022/CHALLENGE-2/hello/: Cargo.toml
2022/CHALLENGE-4/: Cargo.toml
2022/CHALLENGE-4/src/: lib.rs
2022/CHALLENGE-5/: Cargo.toml  spin.toml
2022/CHALLENGE-6/: Cargo.toml  spin.toml
2023/CHALLENGE-1/: Cargo.toml  spin.toml
2023/CHALLENGE-1/assets/: index.html
2023/CHALLENGE-1/src/: lib.rs
2023/CHALLENGE-2/: Cargo.toml  spin.toml
2023/CHALLENGE-2/src/: lib.rs
2023/CHALLENGE-3/: Cargo.toml  spin.toml
2023/CHALLENGE-3/src/: lib.rs
2023/CHALLENGE-4/: Cargo.toml  spin.toml
2023/CHALLENGE-4/src/: lib.rs
2024/CHALLENGE-1/: Cargo.toml  README.md  spin.toml  submit.hurl
2024/CHALLENGE-1/assets/: index.html
2024/CHALLENGE-1/src/: lib.rs
2024/CHALLENGE-2/: Cargo.toml  README.md  componentize.js  run.sh  scoring.js  scoring.wit  spin.toml  submit.hurl
2024/CHALLENGE-2/assets/: naughty-or-nice.html
2024/CHALLENGE-2/src/: lib.rs
2024/CHALLENGE-3/: Cargo.toml  spin.toml
2024/CHALLENGE-3/.wit/components/challenge3/: deps.wit
2024/CHALLENGE-3/assets/: gift-suggestions.html
2024/CHALLENGE-3/src/: lib.rs
2024/CHALLENGE-3/src/bindings/: deps.rs
2024/CHALLENGE-4/: Cargo.toml  spin.toml
2024/CHALLENGE-4/src/: lib.rs
CHALLENGE-1/: Cargo.toml
CHALLENGE-1/src/: lib.rs
CHALLENGE-2/lowercase/: Cargo.toml
CHALLENGE-3/content/: index.md
CHALLENGE-4/: spin.toml
CHALLENGE-5/src/: lib.rs
CHALLENGE-6/src/: lib.rs
(+5 files in other folders)
