[package]
name = "challenge3"
authors = ["Cute_Wisp <sweatpotato13@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.133"
spin-sdk = "3.1.0"
wit-bindgen = "0.34.0"
